--- a/index.html
+++ b/index.html
@@ -45,146 +45,128 @@
 
     <hr>
 
-    <div class="astra-voyage-header">
-      <h1 class="astra-voyage-header-title">
-        NETWORKS
-      </h1>
-    </div>
+    <div class="astra-voyage-container" id="networks">
+      <div class="astra-voyage-header">
+        <h1 class="astra-voyage-header-title">
+          NETWORKS
+        </h1>
+      </div>
 
-    <div class="row">
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="akash">
-          <img src="img/validators/akash_logo.png" alt="akash logo" class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>AKASH</b></h4> 
-            <p>AKT</p>
-            <button class="astra-voyage-validator-button">STAKE</button> 
+      <div class="row">
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="akash">
+            <img src="img/validators/akash_logo.png" alt="akash logo" class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>AKASH</b></h4> 
+              <p>AKT</p>
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="cerberus">
+            <img src="img/validators/cerberus_logo.png" alt="cerberus logo" class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>CERBERUS</b></h4> 
+              <p>CRBRUS</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="chihuahua">
+            <img src="img/validators/chihuahua_logo.png" alt="chihuahua logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>CHIHUAHUA</b></h4> 
+              <p>HUAHUA</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="e_money">
+            <img src="img/validators/e_money_logo.png" alt="e-money logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>E-MONEY</b></h4> 
+              <p>NGM</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="cerberus">
-          <img src="img/validators/cerberus_logo.png" alt="cerberus logo" class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>CERBERUS</b></h4> 
-            <p>CRBRUS</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="chihuahua">
-          <img src="img/validators/chihuahua_logo.png" alt="chihuahua logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>CHIHUAHUA</b></h4> 
-            <p>HUAHUA</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="e_money">
-          <img src="img/validators/e_money_logo.png" alt="e-money logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>E-MONEY</b></h4> 
-            <p>NGM</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-4">
-        <div class="astra-voyage-validator" id="juno">
-          <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>JUNO</b></h4> 
-            <p>JUNO</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
+      <div class="row">
+        <div class="col-4">
+          <div class="astra-voyage-validator" id="juno">
+            <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>JUNO</b></h4> 
+              <p>JUNO</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="astra-voyage-validator" id="konstellation">
+            <img src="img/validators/konstellation_logo.png" alt="konstellation logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>KONSTELLATION</b></h4> 
+              <p>DARC</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="astra-voyage-validator" id="meme">
+            <img src="img/validators/meme_logo.png" alt="me logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>MEME</b></h4> 
+              <p>MEME</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-4">
-        <div class="astra-voyage-validator" id="konstellation">
-          <img src="img/validators/konstellation_logo.png" alt="konstellation logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>KONSTELLATION</b></h4> 
-            <p>DARC</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="astra-voyage-validator" id="meme">
-          <img src="img/validators/meme_logo.png" alt="me logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>MEME</b></h4> 
-            <p>MEME</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="microtick">
-          <img src="img/validators/microtick_logo.png" alt="microtick logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>MICROTICK</b></h4> 
-            <p>TICK</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
+      <div class="row">
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="microtick">
+            <img src="img/validators/microtick_logo.png" alt="microtick logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>MICROTICK</b></h4> 
+              <p>TICK</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="nomic">
-          <img src="img/validators/nomic_logo.png" alt="nomic logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>NOMIC</b></h4> 
-            <p>NOM</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="nomic">
+            <img src="img/validators/nomic_logo.png" alt="nomic logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>NOMIC</b></h4> 
+              <p>NOM</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="osmosis">
-          <img src="img/validators/osmosis_logo.png" alt="osmosis logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>OSMOSIS</b></h4> 
-            <p>OSMO</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="osmosis">
+            <img src="img/validators/osmosis_logo.png" alt="osmosis logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>OSMOSIS</b></h4> 
+              <p>OSMO</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="sif chain">
-          <img src="img/validators/sif_chain_logo.png" alt="sif chain logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>SIF CHAIN</b></h4> 
-            <p>ROWAN</p> 
-            <button class="astra-voyage-validator-button">STAKE</button> 
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="astra-voyage-header">
-      <h1 class="astra-voyage-header-title">
-        UPCOMING NETWORKS
-      </h1>
-    </div>
-    
-    <div class="row">
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="cheq">
-          <img src="img/validators/cheq_logo.png" alt="cheq logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>CHEQ</b></h4> 
-            <p>CHEQ</p> 
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="sif chain">
+            <img src="img/validators/sif_chain_logo.png" alt="sif chain logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>SIF CHAIN</b></h4> 
+              <p>ROWAN</p> 
+              <button class="astra-voyage-validator-button">STAKE</button> 
+            </div>
           </div>
         </div>
       </div>
@@ -192,49 +174,73 @@
 
     <hr>
 
-    <div class="astra-voyage-header">
-      <h1 class="astra-voyage-header-title">
-        TEAM
-      </h1>
-    </div>
-
-    <div class="row">
-      <div class="col-6">
-        <div class="astra-voyage-team">
-          <div class="container">
-            <h4><b>TEAM MEMBER 1</b></h4> 
-            <p>BACKGROUND</p> 
-          </div>
-        </div>
+    <div class="astra-voyage-container" id="upcoming">
+      <div class="astra-voyage-header">
+        <h1 class="astra-voyage-header-title">
+          UPCOMING NETWORKS
+        </h1>
       </div>
-      <div class="col-6">
-        <div class="astra-voyage-team">
-          <div class="container">
-            <h4><b>TEAM MEMBER 1</b></h4> 
-            <p>BACKGROUND</p> 
+      
+      <div class="row">
+        <div class="col-3">
+          <div class="astra-voyage-validator" id="cheq">
+            <img src="img/validators/cheq_logo.png" alt="cheq logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>CHEQ</b></h4> 
+              <p>CHEQ</p> 
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-6">
-        <div class="astra-voyage-team">
-          <div class="container">
-            <h4><b>TEAM MEMBER 1</b></h4> 
-            <p>BACKGROUND</p> 
+    <hr>
+
+    <div class="astra-voyage-container" id="contact">
+      <div class="astra-voyage-header">
+        <h1 class="astra-voyage-header-title">
+          TEAM
+        </h1>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <div class="astra-voyage-team">
+            <div class="container">
+              <h4><b>TEAM MEMBER 1</b></h4> 
+              <p>BACKGROUND</p> 
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-6">
-        <div class="astra-voyage-team">
-          <div class="container">
-            <h4><b>TEAM MEMBER 1</b></h4> 
-            <p>BACKGROUND</p> 
+        <div class="col-6">
+          <div class="astra-voyage-team">
+            <div class="container">
+              <h4><b>TEAM MEMBER 1</b></h4> 
+              <p>BACKGROUND</p> 
+            </div>
+          </div>
+        </div>
+
+      <div class="row">
+        <div class="col-6">
+          <div class="astra-voyage-team">
+            <div class="container">
+              <h4><b>TEAM MEMBER 1</b></h4> 
+              <p>BACKGROUND</p> 
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="astra-voyage-team">
+            <div class="container">
+              <h4><b>TEAM MEMBER 1</b></h4> 
+              <p>BACKGROUND</p> 
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
   </body>
   <footer>
