--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="col-6">
           <div class="astra-voyage-team">
             <div class="container">
-              <h4><b>TEAM MEMBER 1</b></h4> 
+              <h4><b>ZAC</b></h4> 
               <p>BACKGROUND</p> 
             </div>
           </div>
@@ -215,7 +215,7 @@
         <div class="col-6">
           <div class="astra-voyage-team">
             <div class="container">
-              <h4><b>TEAM MEMBER 1</b></h4> 
+              <h4><b>JAMES</b></h4> 
               <p>BACKGROUND</p> 
             </div>
           </div>
@@ -225,7 +225,7 @@
         <div class="col-6">
           <div class="astra-voyage-team">
             <div class="container">
-              <h4><b>TEAM MEMBER 1</b></h4> 
+              <h4><b>TREVOR</b></h4> 
               <p>BACKGROUND</p> 
             </div>
           </div>
@@ -233,7 +233,7 @@
         <div class="col-6">
           <div class="astra-voyage-team">
             <div class="container">
-              <h4><b>TEAM MEMBER 1</b></h4> 
+              <h4><b>DANIEL</b></h4> 
               <p>BACKGROUND</p> 
             </div>
           </div>
