--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div class="astra-voyage-team">
             <div class="container">
               <h4><b>ZAC</b></h4> 
-              <p>SERVER ADMINISTRATOR</p> 
+              <p>SERVER ADMINISTRATION</p> 
             </div>
           </div>
         </div>
@@ -216,7 +216,7 @@
           <div class="astra-voyage-team">
             <div class="container">
               <h4><b>JAMES</b></h4> 
-              <p>RESEARCHER</p> 
+              <p>RESEARCH</p> 
             </div>
           </div>
         </div>
@@ -226,7 +226,7 @@
           <div class="astra-voyage-team">
             <div class="container">
               <h4><b>TREVOR</b></h4> 
-              <p>FINANCER</p> 
+              <p>FINANCE</p> 
             </div>
           </div>
         </div>
@@ -234,7 +234,7 @@
           <div class="astra-voyage-team">
             <div class="container">
               <h4><b>DANIEL</b></h4> 
-              <p>PROGRAMMER</p> 
+              <p>DEVELOPMENT</p> 
             </div>
           </div>
         </div>
