--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
         <a class="astra-nav-link" href="#contact">CONTACT</a>
       </li>
       <li class="right">
-        <a class="astra-nav-link" href="#about">ABOUT</a>
+        <a class="astra-nav-link" href="#home">
+          <img src="img/icons/twitter_logo.svg">
+        </a>
+      </li>
+      <li class="right">
+        <a class="astra-nav-link" href="#home">
+          <img src="img/icons/discord_logo.svg">
+        </a>
       </li>
     </ul>
 
