--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul class="topnav">
       <li class="left">
         <a class="astra-logo-link" href="#home">
-          <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:42px;height:42px;">
+          <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:2rem;height:2rem;">
           ASTRA.VOYAGE
         </a>
       </li>
@@ -30,12 +30,22 @@
       </li>
       <li class="right">
         <a class="astra-nav-link" href="#home">
-          <img src="img/icons/twitter_logo.svg">
+          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">>
         </a>
       </li>
       <li class="right">
         <a class="astra-nav-link" href="#home">
-          <img src="img/icons/discord_logo.svg">
+          <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">>
+        </a>
+      </li>
+      <li class="right">
+        <a class="astra-nav-link" href="#home">
+          <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">>
+        </a>
+      </li>
+      <li class="right">
+        <a class="astra-nav-link" href="#home">
+          <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">>
         </a>
       </li>
     </ul>
