--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
       </li>
       <li class="right">
         <a class="astra-nav-link" href="#home">
-          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
+          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;color: white;">
         </a>
       </li>
       <li class="right">
         <a class="astra-nav-link" href="#home">
-          <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">
+          <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;color: white;">
         </a>
       </li>
       <li class="right">
         <a class="astra-nav-link" href="#home">
-          <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">
+          <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;color: white;">
         </a>
       </li>
       <li class="right">
         <a class="astra-nav-link" href="#home">
-          <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">
+          <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;color: white;">
         </a>
       </li>
     </ul>
