--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <ul class="topnav">
       <li class="left">
         <a class="astra-logo-link" href="#home">
-          <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:2rem;height:2rem;">
+          <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:6rem;height:6rem;">
+        </a>
+      </li>
+      <li class="left">
+        <a class="astra-logo-link" href="#home">
           ASTRA.VOYAGE
         </a>
       </li>
