--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
     </ul>
 
 
-    <div class="astra-voyage-header">
-      <h1 class="astra-voyage-header-title">
-        ASTRA.VOYAGE
-      </h1>
-      <p class="astra-voyage-header-subtitle">
-         Professional Validators Securing & Decentralizing The Cosmos
-      </p>
+    <div class="astra-voyage-container" id="home">
+      <div class="astra-voyage-header">
+        <h1 class="astra-voyage-header-title">
+          ASTRA.VOYAGE
+        </h1>
+        <p class="astra-voyage-header-subtitle">
+           Professional Validators Securing & Decentralizing The Cosmos
+        </p>
+      </div>
     </div>
 
     <hr>
