--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
       </li>
       <li class="left">
-        <a class="astra-logo-link" href="#home">
+        <a class="astra-nav-link" href="#home">
           ASTRA.VOYAGE
         </a>
       </li>
