--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="astra-nav-link" href="#contact">CONTACT</a>
       </li>
       <li class="right">
-        <a class="astra-nav-link" href="#home">
+        <a class="astra-nav-link" href="https://twitter.com/astravoyage">
           <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
