--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </a>
       </li>
       <li class="right">
-        <a class="astra-nav-link" href="#home" onclick="sendEmail()">
+        <a class="astra-nav-link" href="mailto:admin@astra.voyage">
           <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
