--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ASTRA.VOYAGE</title>
+    <title>ASTRA.VOYAGE - TAKE A COSMOS VOYAGE</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/astra-style.css">
@@ -61,7 +61,7 @@
           ASTRA.VOYAGE
         </h1>
         <p class="astra-voyage-header-subtitle">
-           Professional Validators Securing & Decentralizing The Cosmos
+           PROFESSIONAL VALIDATORS SECURING & DECENTRALIZING COSMOS
         </p>
       </div>
     </div>
