--- a/index.html
+++ b/index.html
@@ -18,36 +18,36 @@
           <img src="img/astra-voyage-logo.png" alt="Astra Voyage Logo" style="width:6rem;height:6rem;">
         </a>
       </li>
-      <li class="left">
+      <li class="left astra-voyage-nav">
         <a class="astra-nav-link" href="#home">
           ASTRA.VOYAGE
         </a>
       </li>
-      <li class="center">
+      <li class="center astra-voyage-nav">
         <a class="astra-nav-link" href="#networks">NETWORKS</a>
       </li>
-      <li class="center">
+      <li class="center astra-voyage-nav">
         <a class="astra-nav-link" href="#upcoming">UPCOMING</a>
       </li>
-      <li class="center">
+      <li class="center astra-voyage-nav">
         <a class="astra-nav-link" href="#contact">CONTACT</a>
       </li>
-      <li class="right">
+      <li class="right astra-voyage-nav">
         <a class="astra-nav-link" href="https://twitter.com/astravoyage">
           <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
-      <li class="right">
+      <li class="right astra-voyage-nav">
         <a class="astra-nav-link" href="#home">
           <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
-      <li class="right">
+      <li class="right astra-voyage-nav">
         <a class="astra-nav-link" href="#home">
           <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
-      <li class="right">
+      <li class="right astra-voyage-nav">
         <a class="astra-nav-link" href="mailto:admin@astra.voyage">
           <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">
         </a>
