--- a/index.html
+++ b/index.html
@@ -267,17 +267,17 @@
 
   </body>
   <footer>
-     <div class="row">
-      <div class="col-4">
-        Some other bs
-      </div>
-      <div class="col-4">
-        ASTRA.VOYAGE &copy 2022
-      </div>
-      <div class="col-4">
-        Social Media Symbols
-      </div>
-    </div>
-      <script type="text/javascript" src="js/astra-script.js"></script>
+    <ul class="topnav">
+      <li class="left">
+        dssds
+      </li>
+      <li class="center">
+        sdsd
+      </li>
+      <li class="right">
+        sddsds
+      </li>
+    </ul> 
+    <script type="text/javascript" src="js/astra-script.js"></script>
   </footer>
 </html>
