--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
   </body>
   <footer>
-    <ul class="topnav">
+    <ul class="bottom-nav">
       <li class="left">
         dssds
       </li>
