--- a/index.html
+++ b/index.html
@@ -274,8 +274,25 @@
       <li class="center">
         sdsd
       </li>
-      <li class="right">
-        sddsds
+      <li class="right astra-voyage-nav">
+        <a class="astra-nav-link" href="https://twitter.com/astravoyage">
+          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
+        </a>
+      </li>
+      <li class="right astra-voyage-nav">
+        <a class="astra-nav-link" href="#home">
+          <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">
+        </a>
+      </li>
+      <li class="right astra-voyage-nav">
+        <a class="astra-nav-link" href="#home">
+          <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">
+        </a>
+      </li>
+      <li class="right astra-voyage-nav">
+        <a class="astra-nav-link" href="mailto:admin@astra.voyage">
+          <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">
+        </a>
       </li>
     </ul> 
     <script type="text/javascript" src="js/astra-script.js"></script>
