--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
   </body>
   <footer>
     <ul class="bottom-nav">
-      <li class="left">
-        dssds
+      <li class="left astra-voyage-bottom-nav">
+        START VALIDATING WITH US TODAY
       </li>
-      <li class="center">
-        sdsd
+      <li class="center astra-voyage-bottom-nav">
+        ASTRA.VOYAGE &copy 2022
       </li>
       <li class="right astra-voyage-bottom-nav">
         <a class="astra-nav-link" href="https://twitter.com/astravoyage">
