--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container">
               <h4><b>AKASH</b></h4> 
               <p>AKT</p>
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/akashnet/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -178,7 +178,7 @@
             <div class="container">
               <h4><b>OSMOSIS</b></h4> 
               <p>OSMO</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/osmosis/stake">STAKE</a>
             </div>
           </div>
         </div>
