--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="container">
               <h4><b>CERBERUS</b></h4> 
               <p>CRBRUS</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -102,7 +102,7 @@
             <div class="container">
               <h4><b>CHIHUAHUA</b></h4> 
               <p>HUAHUA</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
             <div class="container">
               <h4><b>E-MONEY</b></h4> 
               <p>NGM</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/emoney/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
             <div class="container">
               <h4><b>JUNO</b></h4> 
               <p>JUNO</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/juno/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
             <div class="container">
               <h4><b>KONSTELLATION</b></h4> 
               <p>DARC</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
             <div class="container">
               <h4><b>MEME</b></h4> 
               <p>MEME</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.meme.sx/">STAKE</a>
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
             <div class="container">
               <h4><b>MICROTICK</b></h4> 
               <p>TICK</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
             <div class="container">
               <h4><b>NOMIC</b></h4> 
               <p>NOM</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://app.nomic.io">STAKE</a>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
             <div class="container">
               <h4><b>SIF CHAIN</b></h4> 
               <p>ROWAN</p> 
-              <button class="astra-voyage-validator-button">STAKE</button> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
             </div>
           </div>
         </div>
