--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="container">
               <h4><b>CHIHUAHUA</b></h4> 
               <p>HUAHUA</p> 
-              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
+              <a class="astra-voyage-validator-button" href="https://chihuahua.omniflix.co/stake">STAKE</a>
             </div>
           </div>
         </div>
