--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="container">
               <h4><b>CERBERUS</b></h4> 
               <p>CRBRUS</p> 
-              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/sifchain/stake">STAKE</a>
+              <a class="astra-voyage-validator-button" href="https://cerberus.omniflix.co/stake">STAKE</a>
             </div>
           </div>
         </div>
