--- a/index.html
+++ b/index.html
@@ -267,34 +267,34 @@
 
   </body>
   <footer>
-    <ul class="bottom-nav">
-      <li class="left astra-voyage-bottom-nav">
+    <div class="footer-content">
+      <h3>ASTRA.VOYAGE</h3>
+      <p>
         START VALIDATING WITH US TODAY
-      </li>
-      <li class="center astra-voyage-bottom-nav">
-        ASTRA.VOYAGE &copy 2022
-      </li>
-      <li class="right astra-voyage-bottom-nav">
-        <a class="astra-nav-link" href="https://twitter.com/astravoyage">
-          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
-        </a>
-      </li>
-      <li class="right astra-voyage-bottom-nav">
-        <a class="astra-nav-link" href="#home">
-          <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">
-        </a>
-      </li>
-      <li class="right astra-voyage-bottom-nav">
-        <a class="astra-nav-link" href="#home">
-          <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">
-        </a>
-      </li>
-      <li class="right astra-voyage-bottom-nav">
-        <a class="astra-nav-link" href="mailto:admin@astra.voyage">
-          <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">
-        </a>
-      </li>
-    </ul> 
+      </p>
+      <ul class="socials">
+        <li>
+          <a class="astra-nav-link" href="https://twitter.com/astravoyage">
+            <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
+          </a>
+        </li>
+        <li>
+          <a class="astra-nav-link" href="#home">
+            <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">
+          </a>
+        </li>
+        <li>
+          <a class="astra-nav-link" href="#home">
+            <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">
+          </a>
+        </li>
+        <li>
+          <a class="astra-nav-link" href="mailto:admin@astra.voyage">
+            <img src="img/icons/email_logo.svg" alt="Email Logo" style="width:2rem;height:2rem;">
+          </a>
+        </li>
+      </ul>
+    </div> 
     <script type="text/javascript" src="js/astra-script.js"></script>
   </footer>
 </html>
