--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-6">
           <div class="astra-voyage-team">
             <div class="container">
@@ -267,6 +268,7 @@
 
   </body>
   <footer>
+
     <div class="footer-content">
       <h3>ASTRA.VOYAGE</h3>
       <p>
@@ -295,6 +297,11 @@
         </li>
       </ul>
     </div> 
+
+    <div class="footer-bottom">
+      <p>COPYWRIGHT &copy;2022 <a href="#">ASTRA.VOYAGE</a>  </p>
+    </div>
+
     <script type="text/javascript" src="js/astra-script.js"></script>
   </footer>
 </html>
