--- a/index.html
+++ b/index.html
@@ -299,7 +299,15 @@
     </div> 
 
     <div class="footer-bottom">
-      <p>COPYWRIGHT &copy;2022 <a href="#">ASTRA.VOYAGE</a>  </p>
+      <p>COPYRIGHT &copy;2022 <a href="#">ASTRA.VOYAGE</a>  </p>
+      <div class="footer-menu">
+       <ul class="f-menu">
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
+       </ul>
+      </div>
     </div>
 
     <script type="text/javascript" src="js/astra-script.js"></script>
