--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
+            <img src="img/team/2234.png" alt="stargaze punk # 2234" style="width:100%">
             <div class="container">
               <h4><b>ZAC</b></h4> 
               <p>SERVER ADMINISTRATION</p> 
@@ -238,6 +239,7 @@
 
         <div class="col-6">
           <div class="astra-voyage-team">
+            <img src="img/team/2653.png" alt="stargaze punk # 2653" style="width:100%">
             <div class="container">
               <h4><b>JAMES</b></h4> 
               <p>RESEARCH</p> 
@@ -248,6 +250,7 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
+            <img src="img/team/4180.png" alt="stargaze punk # 4180" style="width:100%">
             <div class="container">
               <h4><b>TREVOR</b></h4> 
               <p>FINANCE</p> 
@@ -256,6 +259,7 @@
         </div>
         <div class="col-6">
           <div class="astra-voyage-team">
+            <img src="img/team/2234.png" alt="stargaze punk # 4211" style="width:100%">
             <div class="container">
               <h4><b>DANIEL</b></h4> 
               <p>DEVELOPMENT</p> 
