--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
-            <img src="img/team/2234.png" alt="stargaze punk # 2234" style="width:100%">
+            <img src="img/team/2234.png" alt="stargaze punk # 2234" style="width:50%;margin-top: 10%;">
             <div class="container">
               <h4><b>ZAC</b></h4> 
               <p>SERVER ADMINISTRATION</p> 
@@ -239,7 +239,7 @@
 
         <div class="col-6">
           <div class="astra-voyage-team">
-            <img src="img/team/2653.png" alt="stargaze punk # 2653" style="width:100%">
+            <img src="img/team/2653.png" alt="stargaze punk # 2653" style="width:50%;margin-top: 10%;">
             <div class="container">
               <h4><b>JAMES</b></h4> 
               <p>RESEARCH</p> 
@@ -250,7 +250,7 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
-            <img src="img/team/4180.png" alt="stargaze punk # 4180" style="width:100%">
+            <img src="img/team/4180.png" alt="stargaze punk # 4180" style="width:50%;margin-top: 10%;">
             <div class="container">
               <h4><b>TREVOR</b></h4> 
               <p>FINANCE</p> 
@@ -259,7 +259,7 @@
         </div>
         <div class="col-6">
           <div class="astra-voyage-team">
-            <img src="img/team/2234.png" alt="stargaze punk # 4211" style="width:100%">
+            <img src="img/team/2234.png" alt="stargaze punk # 4211" style="width:50%;margin-top: 10%;">
             <div class="container">
               <h4><b>DANIEL</b></h4> 
               <p>DEVELOPMENT</p> 
