--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <div class="footer-content">
       <h3>ASTRA.VOYAGE</h3>
       <p>
-        START VALIDATING WITH US TODAY
+        START STAKING WITH US TODAY
       </p>
       <ul class="socials">
         <li>
@@ -314,10 +314,10 @@
       <p>COPYRIGHT &copy;2022 <a href="#">ASTRA.VOYAGE</a>  </p>
       <div class="footer-menu">
        <ul class="f-menu">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#networks">NETWORKS</a></li>
+          <li><a href="#upcoming">UPCOMING</a></li>
+          <li><a href="#contact">CONTACT</a></li>
        </ul>
       </div>
     </div>
