--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div>
+            <div style="height: 50%;">
                 <img src="img/team/2234.png" alt="stargaze punk # 2234" style="width:75%;margin-top: 10%;">
             </div>
             <div class="container">
@@ -241,7 +241,7 @@
 
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div>
+            <div style="height: 50%;">
                 <img src="img/team/2653.png" alt="stargaze punk # 2653" style="width:75%;margin-top: 10%;">
             </div>
             <div class="container">
@@ -254,7 +254,7 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div>
+            <div style="height: 50%;">
               <img src="img/team/4180.png" alt="stargaze punk # 4180" style="width:75%;margin-top: 10%;">
             </div>
             <div class="container">
@@ -265,7 +265,7 @@
         </div>
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div>
+            <div style="height: 50%;">
               <img src="img/team/4211.png" alt="stargaze punk # 4211" style="width:75%;margin-top: 10%;">
             </div>
             <div class="container">
