--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div style="height: 75%;">
-                <img src="img/team/2234.png" alt="stargaze punk # 2234" style="width:50%;margin-top: 10%;">
+            <div class="astra-voyage-team-image">
+                <img src="img/team/2234.png" alt="stargaze punk # 2234" class="astra-voyage-team-image-fill">
             </div>
             <div class="container">
               <h4><b>ZAC</b></h4> 
@@ -241,8 +241,8 @@
 
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div style="height: 75%;">
-                <img src="img/team/2653.png" alt="stargaze punk # 2653" style="width:50%;margin-top: 10%;">
+            <div class="astra-voyage-team-image">
+                <img src="img/team/2653.png" alt="stargaze punk # 2653" class="astra-voyage-team-image-fill">
             </div>
             <div class="container">
               <h4><b>JAMES</b></h4> 
@@ -254,8 +254,8 @@
       <div class="row">
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div style="height: 75%;">
-              <img src="img/team/4180.png" alt="stargaze punk # 4180" style="width:50%;margin-top: 10%;">
+            <div class="astra-voyage-team-image">
+              <img src="img/team/4180.png" alt="stargaze punk # 4180" class="astra-voyage-team-image-fill">
             </div>
             <div class="container">
               <h4><b>TREVOR</b></h4> 
@@ -265,8 +265,8 @@
         </div>
         <div class="col-6">
           <div class="astra-voyage-team">
-            <div style="height: 75%;">
-              <img src="img/team/4211.png" alt="stargaze punk # 4211" style="width:50%;margin-top: 10%;">
+            <div class="astra-voyage-team-image">
+              <img src="img/team/4211.png" alt="stargaze punk # 4211" class="astra-voyage-team-image-fill">
             </div>
             <div class="container">
               <h4><b>DANIEL</b></h4> 
