--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               <img src="img/team/4211.png" alt="stargaze punk # 4211" class="astra-voyage-team-image-fill">
             </div>
             <div class="container">
-              <h4><b>DANIEL</b></h4> 
+              <h4><b>MENA</b></h4> 
               <p>DEVELOPMENT</p> 
             </div>
           </div>
