--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
           </div>
         </div>
         <div class="col-3">
+          <div class="astra-voyage-validator" id="dig_chain">
+            <img src="img/validators/dig_chain_logo.png" alt="dig chain logo"  class="astra-voyage-validator-logo">
+            <div class="container">
+              <h4><b>DIG CHAIN</b></h4> 
+              <p>DIG</p> 
+              <a class="astra-voyage-validator-button" href="https://wallet.keplr.app/#/emoney/stake">STAKE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-3">
           <div class="astra-voyage-validator" id="e_money">
             <img src="img/validators/e_money_logo.png" alt="e-money logo"  class="astra-voyage-validator-logo">
             <div class="container">
@@ -116,10 +129,7 @@
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col-4">
+        <div class="col-3">
           <div class="astra-voyage-validator" id="juno">
             <img src="img/validators/juno_logo.png" alt="juno logo"  class="astra-voyage-validator-logo">
             <div class="container">
@@ -129,7 +139,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-3">
           <div class="astra-voyage-validator" id="konstellation">
             <img src="img/validators/konstellation_logo.png" alt="konstellation logo"  class="astra-voyage-validator-logo">
             <div class="container">
@@ -139,7 +149,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-3">
           <div class="astra-voyage-validator" id="meme">
             <img src="img/validators/meme_logo.png" alt="me logo"  class="astra-voyage-validator-logo">
             <div class="container">
