--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </li>
       <li class="right astra-voyage-nav">
         <a class="astra-nav-link" href="https://twitter.com/astravoyage">
-          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height">
+          <img src="img/icons/twitter_logo.svg" alt="Twitter Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
     </ul>
