--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/astra-style.css">
     <link rel="ICON" href="img/favicon.ico" type="image/ico" />
   </head>
-  <body>
 
+  <body>
     <div class="star-container"></div>
     <div class="twinkle"></div>
 
@@ -269,7 +269,7 @@
             </div>
             <div class="container">
               <h1><b>TREVOR</b></h1> 
-              <p>FINANCE</p> 
+              <p>OPERATIONS</p> 
             </div>
           </div>
         </div>
