Upgrade Social Media Links

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </a>
       </li>
       <li class="right astra-voyage-nav">
-        <a class="astra-nav-link" href="#home">
+        <a class="astra-nav-link" href="https://t.me/+wj5h3b4rkb9hZDQx">
           <img src="img/icons/telegram_logo.svg" alt="Telegram Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
       <li class="right astra-voyage-nav">
-        <a class="astra-nav-link" href="#home">
+        <a class="astra-nav-link" href="https://discord.gg/ta6znPqK">
           <img src="img/icons/discord_logo.svg" alt="Discord Logo" style="width:2rem;height:2rem;">
         </a>
       </li>
