--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           ASTRA.VOYAGE
         </h1>
         <p class="astra-voyage-header-subtitle">
-           PROFESSIONAL VALIDATORS SECURING & DECENTRALIZING COSMOS
+           PROFESSIONAL VALIDATORS SECURING & DECENTRALIZING THE COSMOS
         </p>
       </div>
     </div>
